public/stylesheets/main.css
/* ... */
/* COMMITTEES */

.committees{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    box-sizing: border-box;
}

.committee{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 600px;
    background-color: #F8F8F8;
}

.committee-header{
    width: 100%;
    padding: 50px 100px 10px;
    box-sizing: border-box;
}

.committee-header h1{
    font-family: 'Google Sans', sans-serif;
    font-weight: bold;
    font-size: 30px;
    line-height: 35px;
    color: #333333;
    margin: 0;
}

.committee-header p{
    font-family: 'Google Sans', sans-serif;
    font-size: 15px;
    line-height: 20px;
    color: #333333;
    margin: 0;
}

.committee-body{
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    width: 100%;
    padding: 0 100px 50px;
    box-sizing: border-box;
}

.responsibilities{
    width: 40%;
}

.responsibilities p{
    font-family: 'Google Sans', sans-serif;
    font-size: 15px;
    line-height: 20px;
    color: #333333;
}

.responsibilities p:nth-child(odd){
    font-weight: bold;
    margin: 0;
}

.responsibilities p:nth-child(even){
    margin-top: 0;
}

.members{
    display: flex;
    flex-wrap: wrap;
    width: 58%;
}

.member{
    width: 50%;
    display: flex;
    align-items: center;
    margin: 10px 0;
}

.member-pic{
    width: 60px;
    height: 60px;
    margin-right: 10px;
    border-radius: 100%;
    object-position: center;
    object-fit: contain;
}

.member-info{
    margin: 0;
}

.member-info p:nth-child(1){
    font-family: 'Google Sans', sans-serif;
    font-weight: bold;
    font-size: 15px;
    line-height: 20px;
    color: #333333;
    margin: 0;
}

.member-info p:nth-child(2){
    font-family: 'Google Sans', sans-serif;
    font-size: 15px;
    line-height: 20px;
    color: #333333;
    margin: 0;
}

.committee-footer{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 0 100px;
    box-sizing: border-box;
    background-color: white;
}

.prev-btn, .next-btn{
    display: flex;
    align-items: center;
    font-family: 'Google Sans', sans-serif;
    cursor: pointer;
}

.prev-btn img, .next-btn p{
    margin-right: 10px;
}

.prev-btn span, .next-btn span{
    font-weight: bold;
}

.join-btn{
    font-family: 'Google Sans', sans-serif;
    font-weight: bold;
    font-size: 20px;
    letter-spacing: 0.02em;
    color: #FFFFFF;
    background-color: #4285F4;
    padding: 12px 22px;
    border: none;
    box-sizing: border-box;
    border-radius: 4px;
    cursor: pointer;
    text-decoration: none;
}

/* INSTRUCTION */

.instruction{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    box-sizing: border-box;
    padding: 0 100px;
}

.instruction-header{
    width: 100%;
    margin: 50px 0 30px;
}

.instruction-header h1{
    font-family: 'Google Sans', sans-serif;
    font-weight: bold;
    font-size: 42px;
    line-height: 46px;
    color: #333333;
}

.instruction-body{
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    width: 100%;
}

.tasks{
    display: flex;
    flex-direction: column;
    width: 47%;
}

.task{
    display: flex;
    align-items: flex-start;
}

.task-pic{
    margin-right: 10px;
}

.task-info p{
    font-family: 'Google Sans', sans-serif;
    font-size: 20px;
    line-height: 25px;
    color: #333333;
    margin: 0 0 30px;
}

.task-info p:nth-child(1){
    font-weight: bold;
    margin: 0;
}

.form{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 43%;
    background-color: #F8F8F8;
    border-radius: 10px;
}

.form h3{
    font-family: 'Google Sans', sans-serif;
    font-weight: bold;
    font-size: 32px;
    line-height: 45px;
    text-align: center;
    color: #000000;
}

.form p{
    width: 85%;
    font-family: 'Google Sans', sans-serif;
    font-size: 16px;
    line-height: 24px;
    text-align: center;
    color: #000000;
}

.form a{
    font-family: 'Google Sans', sans-serif;
    font-weight: bold;
    font-size: 20px;
    color: #FFFFFF;
    padding: 11px 20px;
    margin-bottom: 20px;
    background: #4285F4;
    border: 4px solid #4285F4;
    box-sizing: border-box;
    border-radius: 4px;
    text-decoration: none;
}

@media screen and (max-width: 1250px){

    /* ADVOCACY */

    .advocacy-body h1{
        font-size: 40px;
    }
    
    .advocacy-body p{
        font-size: 15px;
        line-height: 21px;
    }
    
}

@media screen and (max-width: 950px){

    /* COMMITTEES */

    .committee-header{
        padding: 70px 100px 10px;
    }

    .committee-body{
        flex-direction: column;
        justify-content: flex-start;
        padding: 0 50px 20px;
    }

    .responsibilities, .members{
        width: 100%;
    }

    .committee-footer{
        padding: 0 50px;
    }

    .prev-btn img, .next-btn img{
        width: 30px;
    }

    .prev-btn p, .next-btn p{
        font-size: 15px;
    }

    .join-btn{
        font-size: 15px;
    }

    /* INSTRUCTION */

    .instruction-body{
        flex-direction: column;
    }

    .tasks, .form{
        margin-bottom: 50px;
    }

    .tasks, .form{ 
        width: 100%
    }
}

@media screen and (max-width: 900px){

    /* ADVOCACY */

    .advocacy-body h1{
        font-size: 30px;
    }
    
    .advocacy-body p{
        font-size: 13px;
        line-height: 18px;
    }

    /* PLACE */

    .place-body h1{
        font-size: 5vw;
    }
}
/* ... */

